# msm-song-creator

./: .gitignore  Cargo.toml  README.md  help_long.txt  run.bash
src/: display.rs  lists.rs  main.rs  parse.rs  write.rs
src/res/: monster_names.json
